// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePage snapshot: error when getUser rejects 1`] = `
<div>
  <p
    class="sc-hKFymg OJXOx"
  >
    Сервер не отвечает
  </p>
</div>
`;

exports[`ProfilePage snapshot: error when getUser returns null 1`] = `
<div>
  <p
    class="sc-hKFymg OJXOx"
  >
    Не удалось загрузить данные профиля
  </p>
</div>
`;

exports[`ProfilePage snapshot: loading state 1`] = `
<div>
  <p
    class="sc-dlniIP dAuSBu"
  >
    Загрузка…
  </p>
</div>
`;
